# tool-call-compiler

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  deny.toml  package-lock.json  package.json
.aerofortress/items/geral/: 2f4074bf-auditoria-completa-2026-07-01-125-pontos-de-melh.md  6ad863c9-estado-do-mutirão-dos-155-pontos-t1-t15-shipped.md  6ad863c9-mutirão-dos-155-pontos-concluído-v0-2-0-shipped.md  9938ef2b-use-conventional-commits-in-tool-call-compiler.md  b0af06dd-dogfood-compiler-before-manual-fanout.md
.aerofortress/items/perf/: d1bccedb-fase-de-compilação-custa-µs-teto-de-perf-é-amdah.md  d1bccedb-pass-de-otimização-algorítmica-completo-2-lotes.md  d1bccedb-perf-da-compilação-o-n²-do-safe-layers-corrigido.md
.aerofortress/items/specs/: 218838c4-reference-projects-tool-call-compiler.md  7974ff16-glossary-tool-call-compiler-context.md  79813e0d-adr-0001-explicit-effect-safe-ir.md  b5672207-definicao-operacional-uma-tool-call-composta-ent.md  e9dcd908-spec-tool-compiler-v0-2.md  e9dcd908-spec-tool-compiler.md
.aerofortress/specs/: tool-compiler.md
.github/workflows/: ci.yml  release.yml
benchmarks/: suite.json
crates/tool-compiler-adapter-api/: Cargo.toml
crates/tool-compiler-adapter-api/src/: lib.rs  process.rs
crates/tool-compiler-adapter-fs/: Cargo.toml
crates/tool-compiler-adapter-fs/src/: lib.rs  ops.rs
crates/tool-compiler-adapter-http/: Cargo.toml
crates/tool-compiler-adapter-http/src/: lib.rs  reqwest_client.rs
crates/tool-compiler-adapter-mcp/: Cargo.toml
crates/tool-compiler-adapter-mcp/src/: http.rs  lib.rs  proto.rs  stdio.rs  tests.rs
crates/tool-compiler-adapter-shell/: Cargo.toml
crates/tool-compiler-adapter-shell/src/: lib.rs
crates/tool-compiler-cli/: Cargo.toml
crates/tool-compiler-cli/src/: bench.rs  config.rs  lib.rs  local.rs  main.rs  serve.rs
crates/tool-compiler-graph/: Cargo.toml
crates/tool-compiler-graph/src/: layers.rs  lib.rs
crates/tool-compiler-ir/: Cargo.toml
crates/tool-compiler-ir/src/: canonical.rs  effects.rs  lib.rs  refs.rs
crates/tool-compiler-ir/tests/: parsing.rs
crates/tool-compiler-optimizer/: Cargo.toml
crates/tool-compiler-optimizer/src/: cost.rs  explain.rs  lib.rs
crates/tool-compiler-planner/: Cargo.toml
crates/tool-compiler-planner/src/: lib.rs  mining.rs  recipes.rs
crates/tool-compiler-planner/tests/: parity.rs
crates/tool-compiler-runtime/: Cargo.toml
crates/tool-compiler-runtime/src/: builtin.rs  cache.rs  conformance.rs  dispatch.rs  engine.rs  execution.rs  fanout.rs  finish.rs  lib.rs  locks.rs  policy.rs  refs.rs  registry.rs  result.rs  scheduler.rs
crates/tool-compiler-runtime/tests/: property.rs  runtime.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: examples.rs  loc.rs  main.rs  release.rs
docs/: aerofortress-integration.md  benchmarks.md  effects.md  getting-started.md  reference-projects.md  release.md  result-format.md
docs/adr/: 0001-explicit-effect-safe-ir.md
examples/: README.md  bench-compiled-tool-calls.json  bench-sleep.json  dedupe-sleep.json  dedupe.json  dogfood-aerofortress-intent.json  dogfood-aerofortress-knowledge.json  fs-read.json  mcp-filesystem-bench.json  mcp-filesystem.config.example.json  parallel-safe.json  recipe-fanout.json  runtime.config.example.json  sequential-ref.json  sequential-sleep-ref.json  shell-rustc.json  write-conflict.json
schemas/: intent.schema.json  plan.schema.json  recipe.schema.json
scripts/: run-benchmark-suite.mjs
sdk/node/: package.json  tsconfig.build.json  tsconfig.cjs.json  tsconfig.json
sdk/node/scripts/: generate-schemas.mjs  write-cjs-package.mjs
sdk/node/src/: index.test.ts  index.ts
tests/parity/: intent-basic.json  recipe-fanout-static.json  recipe-map-reduce-dynamic.json  recipe-params.json  recipe-pipeline.json
