[workspace]
members = [
  "crates/tool-compiler-adapter-http",
  "crates/tool-compiler-adapter-mcp",
  "crates/tool-compiler-cli",
  "crates/tool-compiler-graph",
  "crates/tool-compiler-ir",
  "crates/tool-compiler-optimizer",
  "crates/tool-compiler-runtime",
  "crates/xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aerofortress/tool-call-compiler"
rust-version = "1.96"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
tool-compiler-graph = { path = "crates/tool-compiler-graph" }
tool-compiler-ir = { path = "crates/tool-compiler-ir" }
tool-compiler-optimizer = { path = "crates/tool-compiler-optimizer" }
tool-compiler-runtime = { path = "crates/tool-compiler-runtime" }

