[workspace]
members = [
  "crates/tool-compiler-adapter-api",
  "crates/tool-compiler-adapter-http",
  "crates/tool-compiler-adapter-fs",
  "crates/tool-compiler-adapter-mcp",
  "crates/tool-compiler-adapter-shell",
  "crates/tool-compiler-cli",
  "crates/tool-compiler-graph",
  "crates/tool-compiler-ir",
  "crates/tool-compiler-optimizer",
  "crates/tool-compiler-planner",
  "crates/tool-compiler-runtime",
  "crates/xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lucasrgt/tool-call-compiler"
rust-version = "1.96"
version = "0.2.0"

[workspace.dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["derive"] }
globset = "0.4.16"
jsonschema = { version = "0.26", default-features = false }
proptest = "1.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util", "io-std", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tool-compiler-adapter-api = { version = "0.2.0", path = "crates/tool-compiler-adapter-api" }
tool-compiler-adapter-fs = { version = "0.2.0", path = "crates/tool-compiler-adapter-fs" }
tool-compiler-adapter-http = { version = "0.2.0", path = "crates/tool-compiler-adapter-http" }
tool-compiler-adapter-mcp = { version = "0.2.0", path = "crates/tool-compiler-adapter-mcp" }
tool-compiler-adapter-shell = { version = "0.2.0", path = "crates/tool-compiler-adapter-shell" }
tool-compiler-graph = { version = "0.2.0", path = "crates/tool-compiler-graph" }
tool-compiler-ir = { version = "0.2.0", path = "crates/tool-compiler-ir" }
tool-compiler-optimizer = { version = "0.2.0", path = "crates/tool-compiler-optimizer" }
tool-compiler-planner = { version = "0.2.0", path = "crates/tool-compiler-planner" }
tool-compiler-runtime = { version = "0.2.0", path = "crates/tool-compiler-runtime" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
