[package]
name = "tool-compiler-adapter-api"
description = "Adapter contract for tool-compiler: the executor trait, batch types, and structured tool errors."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
keywords = ["agent", "tools", "compiler", "adapter"]
categories = ["asynchronous", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
