[package]
name = "tool-compiler-adapter-fs"
description = "Filesystem adapter for tool-compiler."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tool-compiler-ir.workspace = true
tool-compiler-runtime.workspace = true

[dev-dependencies]
tokio.workspace = true
