[package]
name = "tool-compiler-adapter-mcp"
description = "MCP adapter contract helpers for tool-compiler."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tool-compiler-ir.workspace = true
tool-compiler-runtime.workspace = true
