[package]
name = "tool-compiler-cli"
description = "Command line tools for validating and inspecting tool-compiler plans."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "tool-compiler"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tool-compiler-adapter-mcp = { path = "../tool-compiler-adapter-mcp" }
tool-compiler-graph.workspace = true
tool-compiler-ir.workspace = true
tool-compiler-optimizer.workspace = true
tool-compiler-runtime.workspace = true
tokio.workspace = true
