[package]
name = "tool-compiler-optimizer"
description = "Safe optimization passes for effect-aware tool plans."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
keywords = ["agent", "tools", "compiler", "optimizer", "llm"]
categories = ["development-tools"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tool-compiler-graph.workspace = true
tool-compiler-ir.workspace = true
