[package]
name = "tool-compiler-planner"
description = "Intent-to-plan compiler for agent tool calls."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tool-compiler-ir.workspace = true
