[package]
name = "tool-compiler-planner"
description = "Intent-to-plan compiler and recipe expansion for agent tool calls."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
keywords = ["agent", "tools", "compiler", "planner", "llm"]
categories = ["development-tools"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tool-compiler-ir.workspace = true
